Camlp5 Version 5.08:
--------------------

* [05 Jan 08] Fixed bug in EXTEND_PRINTER statement: the match cases with
  "when" did not work.

Camlp5 Version 5.07:
--------------------

* [02 Jan 08] Added "pprintf" statement to use the Camlp5 pretty print
  system more easily and shortly.
* [27 Dec 07] Added function [Grammar.Entry.parse_all] returning the
  list of all solutions when using the parsing algorithm [Backtracking].

Camlp5 Version 5.06:
--------------------

* [19 Dec 07] Upgraded to add compatibilitly with OCaml version 3.10.1.

Camlp5 Version 5.05:
--------------------

* [17 Dec 07] Added function [Pcaml.quotation_location] returning the
  location of the quotation in the source in the context of a quotation
  expander.
* [04 Dec 07] Added generation of file META for ocamlfind in directory
  etc (built but not installed).
* [28 Nov 07] Upgraded to reflect changes done in parse tree in current
  OCaml (version 3.11+dev6).
* [27 Nov 07] Fixed bug in installation. Some files where installed in
  the bin directory instead of lib directory.
* [27 Nov 07] Fixed bug in parsing comments: comments containing '\' where
  incorrectly parsed.

Camlp5 Version 5.04:
--------------------

* [24 Nov 07] Fixed bug in install under MSVC Windows: object and library
  files were not installed (using wrong extensions).
* [24 Nov 07] Fixed bug under Windows: line numbers in error messages were
  wrong (twice the normal value).
* [24 Nov 07] Added ability to change the parsing algorithm of extensible
  grammars, with the function "Grammar.set_algorithm" whose parameter can
  be "predictive" or "backtracking".
* [22 Nov 07] Added backtracking parsers. Functions defined in the module
  Fstream (already containing functional streams and parsers). Syntax
  added in pa_fstream.cmo (already containing syntax for functinal streams
  and parsers). The new syntax uses "bparser" instead of "fparser" and
  a backtracking parser returns, together with its result and its