@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- $Id: conclusion.html,v 1.20 2007/12/29 04:40:07 deraugla Exp $ -->
+  <!-- $Id: conclusion.html,v 1.21 2008/01/05 11:39:39 deraugla Exp $ -->
   <!-- Copyright (c) 2007-2008 INRIA -->
   <title>Conclusion</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,10 +21,10 @@
 
 <p>Just some ideas... things to implement or to think about...</p>
 
-<h2>printer for EXTEND_PRINTER</h2>
+<h2>printer for pprintf</h2>
 
-<p>There is a syntax "<tt>EXTEND_PRINTER</tt>" but the corresponding
-  printer is missing.</p>
+<p>Writing a printer to rebuild "<tt>pprintf</tt>" statements in their
+  original syntax.</p>
 
 <h2>extensible lexers</h2>
 
